# parallel-programming

./: CMakeLists.txt  Task1.cpp  Task11.cpp  Task13.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp  Task7.cpp  Task8.cpp  Task9.cpp
MPI/: MPI_task_1.cpp  MPI_task_1_1.cpp  MPI_task_2.cpp  MPI_task_2_1.cpp  MPI_task_2_2.cpp  MPI_task_2_3.cpp  MPI_task_2_4.cpp  MPI_task_2_5.cpp  MPI_task_3.cpp  MPI_task_3_1.cpp  MPI_task_3_2.cpp  MPI_task_3_3.cpp  MPI_task_3_4.cpp  MPI_task_3_5.cpp  MPI_task_4.cpp  MPI_task_4_1.cpp  MPI_task_4_2.cpp  MPI_task_5.cpp  MPI_task_5_1.cpp  MPI_task_5_2.cpp  MPI_task_5_3.cpp  MPI_task_6.cpp  MPI_task_9.cpp
OpenMP/: Task10.cpp  Task14.cpp  Task15.cpp  Task6.cpp  Task7.cpp
